--- a/index.html
+++ b/index.html
@@ -3,217 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROXY | Official Profile</title>
+    <title>PROXY | DOMINATING THE GLITCH</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap');
+
         :root {
-            --primary: #00d2ff;
-            --bg: #050505;
-            --card-bg: rgba(255, 255, 255, 0.03);
-            --border: rgba(255, 255, 255, 0.1);
+            --neon-blue: #00d2ff;
+            --neon-pink: #ff0055;
+            --bg-black: #050505;
+            --card-glass: rgba(255, 255, 255, 0.03);
         }
 
         body {
             margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background-color: var(--bg);
+            font-family: 'Rajdhani', sans-serif;
+            background-color: var(--bg-black);
             color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 20px;
-            background: radial-gradient(circle at top, #111 0%, #000 100%);
+            background-image: radial-gradient(circle at 50% 10%, #111 0%, #000 100%);
+            overflow-x: hidden;
         }
 
-        .container {
-            width: 100%;
-            max-width: 450px;
-            text-align: center;
-        }
+        .container { width: 95%; max-width: 450px; padding: 20px; box-sizing: border-box; }
 
-        /* Profile Section */
+        /* HEADER SECTION */
+        .profile-wrapper { text-align: center; margin-top: 30px; }
         .profile-img {
-            width: 110px;
-            height: 110px;
-            border-radius: 50%;
-            border: 3px solid var(--primary);
-            margin-top: 20px;
-            box-shadow: 0 0 20px var(--primary);
-            object-fit: cover;
+            width: 120px; height: 120px; border-radius: 50%;
+            border: 2px solid var(--neon-blue);
+            box-shadow: 0 0 25px var(--neon-blue), inset 0 0 15px var(--neon-blue);
+            object-fit: cover; margin-bottom: 15px;
         }
 
-        h2.section-header {
-            font-size: 0.9rem;
-            color: #888;
-            letter-spacing: 3px;
-            margin-top: 30px;
-            text-transform: uppercase;
+        .glitch-header { font-family: 'Orbitron', sans-serif; font-size: 0.8rem; letter-spacing: 5px; color: #666; text-transform: uppercase; }
+        .main-title { font-size: 2rem; margin: 10px 0; color: #fff; text-shadow: 0 0 10px rgba(0, 210, 255, 0.5); }
+
+        /* GLASS CARD STYLE */
+        .glass-card {
+            background: var(--card-glass);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-radius: 20px; padding: 20px; margin-bottom: 30px;
+            backdrop-filter: blur(10px); box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
-        h1.main-name {
-            font-size: 1.6rem;
-            margin: 10px 0 20px;
-            color: #fff;
+        .section-tag {
+            display: inline-block; padding: 5px 15px; border-radius: 5px;
+            background: rgba(0, 210, 255, 0.1); color: var(--neon-blue);
+            font-weight: bold; font-size: 0.7rem; letter-spacing: 2px;
+            margin-bottom: 20px; border-left: 3px solid var(--neon-blue);
         }
 
-        /* Cards */
-        .card {
-            background: var(--card-bg);
-            border: 1px solid var(--border);
-            border-radius: 18px;
-            padding: 20px;
-            text-align: left;
-            margin-bottom: 25px;
-            backdrop-filter: blur(10px);
-        }
+        /* INFO LIST */
+        .info-row { display: flex; align-items: center; margin-bottom: 15px; border-bottom: 1px solid rgba(255,255,255,0.03); padding-bottom: 8px; }
+        .info-row span.key { color: #555; font-size: 0.8rem; font-weight: bold; width: 100px; text-transform: uppercase; }
+        .info-row span.val { color: var(--neon-blue); font-size: 1.1rem; font-weight: 500; }
 
-        .info-item {
-            margin-bottom: 12px;
-            border-bottom: 1px dashed rgba(255,255,255,0.05);
-            padding-bottom: 8px;
-        }
+        /* WORKS SECTION (ADVANCED) */
+        .work-item { margin-bottom: 20px; position: relative; padding-left: 15px; }
+        .work-item::before { content: ''; position: absolute; left: 0; top: 5px; height: 80%; width: 2px; background: var(--neon-blue); }
+        .work-title { font-family: 'Orbitron', sans-serif; font-size: 0.95rem; color: #fff; margin-bottom: 5px; }
+        .work-desc { font-size: 0.85rem; color: #888; line-height: 1.4; }
 
-        .label { color: #666; font-size: 0.75rem; font-weight: bold; display: block; text-transform: uppercase; }
-        .value { color: var(--primary); font-size: 1rem; display: block; margin-top: 2px; }
-
-        /* Works Section Style */
-        .work-box {
-            margin-bottom: 15px;
-        }
-        .work-box h3 {
-            font-size: 1rem;
-            color: var(--primary);
-            margin: 0 0 5px 0;
-        }
-        .work-box p {
-            font-size: 0.85rem;
-            color: #aaa;
-            margin: 0;
-            line-height: 1.4;
-        }
-
-        /* Links Section Style */
-        .link-item {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background: rgba(255,255,255,0.02);
-            padding: 12px 15px;
-            border-radius: 12px;
-            text-decoration: none;
-            color: white;
-            margin-bottom: 10px;
-            border: 1px solid var(--border);
+        /* NETWORKS (PRO BUTTONS) */
+        .net-btn {
+            display: flex; align-items: center; justify-content: space-between;
+            background: linear-gradient(90deg, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.01) 100%);
+            border: 1px solid rgba(255,255,255,0.1); border-radius: 12px;
+            padding: 15px; margin-bottom: 12px; text-decoration: none; color: #fff;
             transition: 0.3s;
         }
-        .link-item:hover {
-            border-color: var(--primary);
-            background: rgba(0, 210, 255, 0.05);
-        }
+        .net-btn:hover { border-color: var(--neon-blue); background: rgba(0, 210, 255, 0.05); transform: scale(1.02); }
+        .net-btn .name { font-weight: 600; font-size: 1rem; }
+        .net-btn .tag { font-size: 0.65rem; color: var(--neon-blue); border: 1px solid var(--neon-blue); padding: 2px 8px; border-radius: 4px; }
 
-        .status-dot {
-            height: 7px;
-            width: 7px;
-            background: #00ff00;
-            border-radius: 50%;
-            box-shadow: 0 0 8px #00ff00;
-        }
+        .pulse { height: 8px; width: 8px; background: #00ff00; border-radius: 50%; box-shadow: 0 0 10px #00ff00; animation: p 1.5s infinite; }
+        @keyframes p { 0% { opacity: 1; } 50% { opacity: 0.3; } 100% { opacity: 1; } }
 
-        .footer-text {
-            font-size: 0.75rem;
-            color: #444;
-            margin: 40px 0 20px;
-            letter-spacing: 2px;
+        .contact-btn {
+            display: block; text-align: center; background: var(--neon-blue); color: #000;
+            padding: 18px; border-radius: 15px; font-weight: bold; font-family: 'Orbitron', sans-serif;
+            text-decoration: none; margin: 40px 0; box-shadow: 0 0 20px rgba(0, 210, 255, 0.4);
+            transition: 0.3s; font-size: 1rem;
         }
+        .contact-btn:hover { transform: translateY(-3px); box-shadow: 0 0 35px var(--neon-blue); }
 
-        .btn-contact {
-            display: inline-block;
-            background: var(--primary);
-            color: black;
-            padding: 12px 40px;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: bold;
-            margin-top: 10px;
-            box-shadow: 0 5px 15px rgba(0, 210, 255, 0.3);
-        }
+        .footer { text-align: center; color: #333; font-size: 0.7rem; letter-spacing: 3px; margin-bottom: 40px; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <img src="https://via.placeholder.com/150" alt="PROXY" class="profile-img">
-    <h2 class="section-header">🔻💻 𝗔𝗕𝗢𝗨𝗧 ⚡</h2>
-    <h1 class="main-name">❛ .𝁘ໍ⸼ 𝐏 𝐑 𝐎 𝐗 𝐘𐏓𝟑 🕸️</h1>
+    <div class="profile-wrapper">
+        <img src="https://via.placeholder.com/150" class="profile-img">
+        <div class="glitch-header">🔻💻 𝗔𝗕𝗢𝗨𝗧 ⚡</div>
+        <h1 class="main-title">❛ .𝁘ໍ⸼ 𝐏 𝐑 𝐎 𝐗 𝐘𐏓𝟑 🕸️</h1>
+    </div>
 
-    <div class="card">
-        <div class="info-item">
-            <span class="label">🕸️ TELEGRAM NAME</span>
-            <span class="value">⚡ 𝐏𝐑𝐎𝐗𝐘 𐏓𝟑 🪙</span>
+    <div class="glass-card">
+        <div class="section-tag">IDENTITY.EXE</div>
+        <div class="info-row"><span class="key">⚡ NAME</span><span class="val">𝐏𝐑𝐎𝐗𝐘 𐏓𝟑 🪙</span></div>
+        <div class="info-row"><span class="key">🎧 USERNAME</span><span class="val">@Proxyfxz</span></div>
+        <div class="info-row"><span class="key">🎧 USER ID</span><span class="val">8210445482</span></div>
+        <div class="info-row"><span class="key">🎧 BIRTHDAY</span><span class="val">24 • OCT 🕶️</span></div>
+        <div class="info-row"><span class="key">🎧 FROM</span><span class="val">WEST BENGAL</span></div>
+        <div class="info-row"><span class="key">🎧 STUDY</span><span class="val">👨‍💻 ENGINEERING</span></div>
+        <div class="info-row" style="border:none;"><span class="key">🎧 HOBBIES</span><span class="val">MUSIC • GAMING • DEV</span></div>
+    </div>
+
+    <div class="glass-card">
+        <div class="section-tag">CAPABILITIES.LOG</div>
+        <div class="work-item">
+            <div class="work-title">🛡️ BANNING & UNBANNING</div>
+            <div class="work-desc">Social Media Security expert. Recovers disabled accounts and handles Meta/YouTube policy violations with high success rate.</div>
         </div>
-        <div class="info-item">
-            <span class="label">🎧 USERNAME</span>
-            <span class="value">@Proxyfxz</span>
+        <div class="work-item">
+            <div class="work-title">📈 ALGORITHM DOMINATION</div>
+            <div class="work-desc">Helping brands scale. Expert in Instagram Reels and YouTube organic growth hacking and engagement optimization.</div>
         </div>
-        <div class="info-item">
-            <span class="label">📍 FROM</span>
-            <span class="value">West Bengal</span>
+        <div class="work-item">
+            <div class="work-title">🛒 ACCOUNT PROVISIONING</div>
+            <div class="work-desc">Trusted seller of premium, niche-specific Instagram accounts with high engagement and clean history.</div>
         </div>
-        <div class="info-item">
-            <span class="label">👨‍💻 STUDY</span>
-            <span class="value">Engineering Student</span>
-        </div>
-        <div class="info-item">
-            <span class="label">🎶 HOBBIES</span>
-            <span class="value">Music • Gaming • Programming</span>
+        <div class="work-item" style="margin:0;">
+            <div class="work-title">💻 FULL-STACK DEVELOPMENT</div>
+            <div class="work-desc">Building advanced Telegram automation bots and high-performance glitched-themed websites.</div>
         </div>
     </div>
 
-    <h2 class="section-header">⚡ MY EXPERTISE</h2>
-    <div class="card">
-        <div class="work-box">
-            <h3>🛡️ Banning & Unbanning</h3>
-            <p>Recovering disabled accounts & solving Meta violations.</p>
-        </div>
-        <hr style="border:0; border-top:1px solid rgba(255,255,255,0.05); margin:15px 0;">
-        <div class="work-box">
-            <h3>📈 Social Media Growth</h3>
-            <p>Expert in IG/YT algorithm domination & organic growth.</p>
-        </div>
-        <hr style="border:0; border-top:1px solid rgba(255,255,255,0.05); margin:15px 0;">
-        <div class="work-box">
-            <h3>💻 Website Developer</h3>
-            <p>Building high-performance sites & Telegram bots.</p>
-        </div>
+    <div class="glass-card">
+        <div class="section-tag">NETWORKS.JSON</div>
+        
+        <p style="font-size: 0.7rem; color: #444; margin-bottom: 10px;">• ACTIVE BOTS</p>
+        <a href="https://t.me/sparkpr3m1um_bot" class="net-btn">
+            <div><span class="name">Spark Premium</span><br><span class="username" style="font-size:0.7rem; color:#666;">@sparkpr3m1um_bot</span></div>
+            <div class="pulse"></div>
+        </a>
+        <a href="https://t.me/hyperbanning_bot" class="net-btn">
+            <div><span class="name">Hyper Banning</span><br><span class="username" style="font-size:0.7rem; color:#666;">@hyperbanning_bot</span></div>
+            <div class="pulse"></div>
+        </a>
+        <a href="https://t.me/Comfuker_bot" class="net-btn">
+            <div><span class="name">Comfuker Bot</span><br><span class="username" style="font-size:0.7rem; color:#666;">@Comfuker_bot</span></div>
+            <div class="pulse"></div>
+        </a>
+
+        <p style="font-size: 0.7rem; color: #444; margin: 25px 0 10px;">• OFFICIAL CHANNELS</p>
+        <a href="https://t.me/proxydominates" class="net-btn">
+            <span class="name">Proxy Dominates</span>
+            <span class="tag">MAIN</span>
+        </a>
+        <a href="https://t.me/midnight_xaura" class="net-btn">
+            <span class="name">Midnight Xaura</span>
+            <span class="tag">COMMUNITY</span>
+        </a>
+        <a href="https://t.me/proxymethodss" class="net-btn">
+            <span class="name">Proxy Methods</span>
+            <span class="tag">VIP</span>
+        </a>
+        <a href="https://t.me/proxyinxc" class="net-btn" style="border-style: dashed;">
+            <span class="name">Safety Backup</span>
+            <span class="tag" style="color:#ff0055; border-color:#ff0055;">SECURE</span>
+        </a>
     </div>
 
-    <h2 class="section-header">🚀 NETWORKS & BOTS</h2>
-    <div class="card" style="background:transparent; border:none; padding:0;">
-        <p style="font-size:0.7rem; color:#555; margin-bottom:10px;">PREMIUM BOTS</p>
-        <a href="https://t.me/sparkpr3m1um_bot" class="link-item">
-            <span>Spark Premium</span>
-            <div class="status-dot"></div>
-        </a>
-        <a href="https://t.me/hyperbanning_bot" class="link-item">
-            <span>Hyper Banning Bot</span>
-            <div class="status-dot"></div>
-        </a>
-        <a href="https://t.me/Comfuker_bot" class="link-item">
-            <span>Comfuker Bot</span>
-            <div class="status-dot"></div>
-        </a>
+    <a href="https://t.me/Proxyfxz" class="contact-btn">ESTABLISH CONNECTION</a>
 
-        <p style="font-size:0.7rem; color:#555; margin:20px 0 10px;">OFFICIAL CHANNELS</p>
-        <a href="https://t.me/proxydominates" class="link-item"><span>Proxy Dominates</span></a>
-        <a href="https://t.me/midnight_xaura" class="link-item"><span>Midnight Xaura</span></a>
-        <a href="https://t.me/proxymethodss" class="link-item"><span>Proxy Methods</span></a>
-        <a href="https://t.me/proxyinxc" class="link-item" style="border-style:dashed;"><span>Backup Channel</span></a>
-    </div>
-
-    <a href="https://t.me/Proxyfxz" class="btn-contact">CONTACT PROXY</a>
-
-    <div class="footer-text">
+    <div class="footer">
         • CODE • CREATE • DOMINATE •<br>
-        <span style="color:var(--primary)">Living In My Own Glitched World 👾</span>
+        <span style="color:var(--neon-blue)">LIVING IN MY OWN GLITCHED WORLD 👾⚡</span>
     </div>
 </div>
 
